--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <style>
         * {
-			box-sizing: border-box;
-			margin: 0;
-			padding: 0;
-		}
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
 
         .wrapper {
             width: 320px;
@@ -46,7 +46,7 @@
             </header>
 
             <footer>
-                <p>Copyright</p>
+                <p>Copyright 2025</p>
             </footer>
         </div>
 
