--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             margin: 0 auto 40px;
         }
 
-        .special {}
+        .special {
+            color: green;
+        }
 
         .special h3 {
             font-size: 4rem;
